# poc-sse-emojis-server

./: Cargo.toml  README.md
src/: main.rs
