[package]
name = "poc-sse-emojis-server"
version = "0.1.0"
authors = ["William Archimede <william.archimede@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
broadcaster = "1.0.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] } # not used yet
tide = "0.16.0"